# reachability_map_visualizer

./: CMakeLists.txt  README.md  package.xml  plugin_description.xml
include/reachability_map_visualizer/: hdf5_dataset.h
maps/: filtered_3D_reach_map_gripper_left_grasping_frame_torso_False_0.05_2022-08-29-19-04-04.npy  filtered_3D_reach_map_gripper_right_grasping_frame_torso_False_0.05_2022-08-29-19-04-04.npy
msg/: WorkSpace.msg
rviz/: base_placement_map.rviz  reachability_map.rviz
src/: hdf5_dataset.cpp  load_reachability_map.cpp  reachability_map_display.cpp  reachability_map_display.h  reachability_map_visual.cpp  reachability_map_visual.h
